# ezdib

./: CMakeLists.txt  PROJECT.txt  ProjectHome.md  README.md  ezdib.c  ezdib.h  main.c
tests/: CMakeLists.txt  ezdib_tests.c
